--- a/_config.yml
+++ b/_config.yml
@@ -285,3 +285,15 @@ defaults:
       comments: # true
       share: true
       related: true
+
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments:
+      share: true
+      related: true
