Modify talk page

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dirt" # "default", "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tianbai Cui"
+title                    : "Tianbai's Website"
 title_separator          : "-"
 name                     : "Tianbai Cui"
 description              : "Personal website."
