--- a/_config.yml
+++ b/_config.yml
@@ -108,9 +108,9 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:tianbaicui@gmail.com
+      #url: mailto:tianbaicui@gmail.com
     - label: "Linkedin"
-      icon: "fas fa-fw fa-linkedin"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/tianbai-cui"
     - label: "Website"
       icon: "fas fa-fw fa-link"
