--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       #url: mailto:tianbaicui@gmail.com
     - label: "Linkedin"
-      icon: "fa fa-linkedin-square"
+      icon: "fas fa-fw fa-linkedin-square"
       url: "https://www.linkedin.com/in/tianbai-cui"
     - label: "Website"
       icon: "fas fa-fw fa-link"
